--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 * {
     font-family: sans-serif;
+    font-size: 18px;
     margin: 0;
     padding: 0;
     list-style: none;
@@ -32,7 +33,6 @@ ul {
 
 a, .secondary-text {
     color: #e5e7eb;
-    font-size: 18px;
 }
 
 .logo {
@@ -55,6 +55,7 @@ a, .secondary-text {
 .secondary-text {
     margin: 10px 0;
 }
+
 button {
     background-color: #3882f6;
     padding: .3em 1em;
@@ -69,5 +70,32 @@ img {
     border: 5px solid #555;
 }
 
+.information {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+    text-align: center;
+    margin: 1em 0;
+}
 
+.container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 2em;
+}
 
+.container div div {
+    border: 4px solid #3882f6;
+    border-radius: 10px;
+    height: 175px;
+    width: 175px;
+}
+
+.container .item {
+    width: 175px;
+}
+
+.container p {
+    margin: 10px 5px;
+}
