--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ img {
     margin: 0 20% 5em;
     border-radius: .2em;
     padding: 2em;
-    color: #e5e7eb;
+    color: #f9faf8;
 }
 
 .sign-up-headline {
@@ -143,7 +143,16 @@ img {
 }
 
 .sign-up-button {
-    border: 2px solid white;
+    border: 2px solid #f9faf8;
+}
+
+footer {
+    background-color: #1f2937;
+    color: #e5e7eb;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2em;
 }
 @media only screen and (max-width: 800px) {
     * {
